--- a/Cognifide.PowerShell.Sitecore92/Cognifide.PowerShell.Sitecore92.csproj
+++ b/Cognifide.PowerShell.Sitecore92/Cognifide.PowerShell.Sitecore92.csproj
@@ -40,7 +40,7 @@
       <HintPath>..\..\..\Windows\assembly\GAC_MSIL\Microsoft.PowerShell.Commands.Utility\1.0.0.0__31bf3856ad364e35\Microsoft.PowerShell.Commands.Utility.dll</HintPath>
     </Reference>
     <Reference Include="Sitecore.Kernel">
-      <HintPath>..\Libraries\Sc920\Sitecore.Kernel.dll</HintPath>
+      <HintPath>..\..\..\sites\sitecore93\Website\bin\Sitecore.Kernel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
