--- a/Cognifide.PowerShell.Package/Cognifide.PowerShell.Package.csproj
+++ b/Cognifide.PowerShell.Package/Cognifide.PowerShell.Package.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Cognifide.PowerShell.Package</RootNamespace>
     <AssemblyName>Cognifide.PowerShell.Package</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -35,8 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Sitecore.Kernel, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Sitecore.Kernel.NoReferences.8.2.170728\lib\NET452\Sitecore.Kernel.dll</HintPath>
+    <Reference Include="Sitecore.Kernel">
+      <HintPath>..\..\..\sites\sitecore93\Website\bin\Sitecore.Kernel.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -67,16 +67,16 @@
   </Target>
   -->
   <ItemGroup>
-    <AssemblyFiles Include="$(TargetDir)Cognifide.PowerShell*.*" >
+    <AssemblyFiles Include="$(TargetDir)Cognifide.PowerShell*.*">
       <Visible>false</Visible>
     </AssemblyFiles>
     <ProjectDeployPathFiles Include="$(ProjectDeployPath)\**\*.*">
       <Visible>false</Visible>
     </ProjectDeployPathFiles>
-  </ItemGroup> 
+  </ItemGroup>
   <PropertyGroup>
     <ScriptLocation Condition=" '$(ScriptLocation)'=='' ">$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)\..\Post_Build.ps1'))</ScriptLocation>
-  </PropertyGroup> 
+  </PropertyGroup>
   <Target Name="AfterBuild">
     <Copy SourceFiles="@(AssemblyFiles)" DestinationFolder="$(ProjectDeployPath)\bin" ContinueOnError="true" />
     <Exec Command="PowerShell -NonInteractive -ExecutionPolicy Unrestricted -File &quot;$(ScriptLocation)&quot; -ProjectFilter &quot;$(MSBuildProjectName)&quot;" />
