--- a/Cognifide.PowerShell/App_Config/Include/Cognifide.PowerShell.config
+++ b/Cognifide.PowerShell/App_Config/Include/Cognifide.PowerShell.config
@@ -242,7 +242,7 @@
         <processor type="Cognifide.PowerShell.Integrations.Pipelines.AssemblyResolver, Cognifide.PowerShell"/>
       </initialize>
       <getChromeData>
-        <processor type="Cognifide.PowerShell.Integrations.Pipelines.PageEditorExperienceButtonScript, Cognifide.PowerShell"/>
+        <processor type="Cognifide.PowerShell.Integrations.Pipelines.PageEditorExperienceButtonScript, Cognifide.PowerShell" resolve="true"/>
       </getChromeData>
       <getContentEditorWarnings>
         <processor patch:before="processor[@type='Sitecore.Pipelines.GetContentEditorWarnings.RunRules, Sitecore.Kernel']"
